--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Valentines 1</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Full Screen Background</title>
+  <link rel="stylesheet" href="home.css">
+</head>
+<body>
 
 
-    <link rel="stylesheet" href="home.css" />
-
-    </head>
-    <body>
-        <p> hello world</p>
-
-
-
-    <script src="home.js"></script>
-    </body>
+  <script src="home.js"></script>
+</body>
 </html>
