--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="home.css">
 </head>
 <body>
-
+    <div class="center-button">
+        <button onclick="handleClick()">Click Me!</button>
+    </div>
 
   <script src="home.js"></script>
 </body>
