--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
   <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <div class="center-button">
-        <button onclick="handleClick()">Click Me!</button>
+
+        <div class="vending-machine-clickable" onclick="openModal()"></div>
+
+    <!-- Cloud Modal -->
+    <div class="modal" id="cloudModal">
+        <div class="cloud-modal">
+            <div class="cloud-content">
+                <p>You clicked the vending machine!</p>
+                <button class="close-btn" onclick="closeModal()">Close</button>
+            </div>
+        </div>
     </div>
+
 
   <script src="home.js"></script>
 </body>
